WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259330
REGRESSION(
266149@main
): RemoteRenderingBackendProxy.h(126): error C3646: 'displayRequirement': unknown override specifier
https://bugs.webkit.org/show_bug.cgi?id=259330
Summary
REGRESSION(266149@main): RemoteRenderingBackendProxy.h(126): error C3646: 'di...
Fujii Hironori
Reported
2023-07-18 20:35:39 PDT
REGRESSION(
266149@main
): RemoteRenderingBackendProxy.h(126): error C3646: 'displayRequirement': unknown override specifier WinCairo gets broken by
266149@main
(
bug#259316
).
https://build.webkit.org/#/builders/729/builds/6985
> WebProcess\GPU\graphics\RemoteRenderingBackendProxy.h(126): error C3646: 'displayRequirement': unknown override specifier > WebProcess\GPU\graphics\RemoteRenderingBackendProxy.h(126): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-07-18 20:52:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15921
EWS
Comment 2
2023-07-18 21:00:00 PDT
Committed
266152@main
(6583669c9835): <
https://commits.webkit.org/266152@main
> Reviewed commits have been landed. Closing PR #15921 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-18 21:00:25 PDT
<
rdar://problem/112509572
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug