REGRESSION(266149@main): RemoteRenderingBackendProxy.h(126): error C3646: 'displayRequirement': unknown override specifier https://bugs.webkit.org/show_bug.cgi?id=259330

Unreviewed build fix for Windows port.
It was broken by 266149@main (bug#259316).

> WebProcess\GPU\graphics\RemoteRenderingBackendProxy.h(126): error C3646: 'displayRequirement': unknown override specifier
> WebProcess\GPU\graphics\RemoteRenderingBackendProxy.h(126): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int

* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:
Guard SwapBuffersResult by PLATFORM(COCOA).

Canonical link: https://commits.webkit.org/266152@main